<resources>
    <string name="app_name">DemocraTic</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="drawer_open">menu lateral abierto</string>
    <string name="drawer_close">menu lateral cerrado</string>
    <string name="titulo">Titulo</string>
    <string name="descripcion">Descripcion</string>
    <string name="voice_state_1">ststeVoiceuno</string>
    <string name="voice_state_0">stateVoiceDos</string>
    <string name="con_intenert_fail">Sin conexión a Internet</string>
    <string name="voted">Ya realizaste esta votación</string>
    <string name="change_vote">Desea cambiar la votación?</string>
    <string name="dialog_positive">Aceptar</string>
    <string name="dialog_negative">Cancelar</string>
    <string name="confirm_pass">Confirmar Contraseña</string>
    <string name="password">Contraseña</string>
    <string name="email">Correo Electronico</string>
    <string name="already_have_acount">¿Ya tienes una cuenta?</string>

    <string name="c_gobierno">Gobierno</string>
    <string name="c_salud">Salud</string>
    <string name="c_educacion">Educación</string>
    <string name="c_ambiente">Medio Ambiente</string>
    <string name="nav_item_home">Inicio</string>
    <string name="nav_group_section">Secciones</string>
    <string name="nav_group_my">personal</string>
    <string name="nav_item_mydiscussion">Mis Discusiones</string>
    <string name="nav_item_mysurvey">Mis Encuestas</string>
    <string name="nav_item_mypost">Mis Publicaciones</string>
    <string name="nav_item_logout">Cerrar Sesion</string>
    <string name="sigin_fail">Llena todos los campos</string>
    <string name="sigin_pass_fail">Las contraseñas deben ser iguales</string>
    <string name="sigin_register">Registrando</string>
    <string name="sigin_success">Registro Exitoso</string>
    <string name="sigin_error">Error al registrar, intenta de nuevo</string>
    <string name="login_validate">Verificando</string>

    <string-array name="Categorias">
        <item>@string/c_gobierno</item>
        <item>@string/c_salud</item>
        <item>@string/c_educacion</item>
        <item>@string/c_ambiente</item>
    </string-array>

    <string name="title_progres_save_voice">Guardando nota de voz</string>
    <string name="content_progress_voice_note">por favor espere</string>
    <string name="title_alertdialog">¿Desea enviar la nota de voz?</string>
    <string name="txt_share">Compartir</string>
    <string name="txt_share_descr">Aqui va la descripcion del foro</string>
    <string name="txt_foro_desc">Aqui va el nombre del foro</string>

    <string name="facebook_app_id">867572283358216</string>


</resources>
