<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
<item android:id="@+id/nav_home"
    android:title="@string/nav_item_home"
    android:icon="@drawable/ic_inbox_white_36dp"/>
   <group android:id="@+id/secciones_menu_nav"
       android:checkableBehavior="single">

    <item android:title="@string/nav_group_section">
        <menu>
            <item android:id="@+id/nav_gobierno"
                android:title="@string/c_gobierno"
                android:icon="@drawable/iconosslide17"
                />
            <item android:id="@+id/nav_educacion"
                android:title="@string/c_educacion"
                android:icon="@drawable/iconosslide19"
                />
            <item android:id="@+id/nav_salud"
                android:title="@string/c_salud"
                android:icon="@drawable/iconosslide21"
                ></item>
            <item android:id="@+id/nav_medio_ambiente"
                android:title="@string/c_ambiente"
                android:icon="@drawable/iconosslide23"
                ></item>
        </menu>
    </item>

   </group>


    <group android:id="@+id/persona_menu_nav">

    <item android:title="@string/nav_group_my">
        <menu>
           <item android:id="@+id/nav_my_post"
            android:title="@string/nav_item_mypost"
            android:icon="@drawable/iconosslide26"
            />

            <item android:id="@+id/nav_logout"
                android:title="@string/nav_item_logout"
                />


        </menu>
    </item>
    </group>

</menu>