<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    android:padding="@dimen/small_padding"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.kcumendigital.democratic.LoginActivity"
    android:background="@color/statusBarColor"
    >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/statusBarColor"

        />
    <LinearLayout
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="@dimen/small_padding"
            android:id="@+id/coordinator_padre"
            android:background="#ffffff"
            android:layout_marginBottom="50dp"
            >
            <ImageView
                android:id="@+id/picture"
                android:layout_width="@dimen/sigin_picture"
                android:layout_height="@dimen/sigin_picture"
                android:layout_marginBottom="@dimen/small_margin"
                android:src="@drawable/silueta"

                />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/email_login_sign"
                android:layout_height="wrap_content"
                android:layout_width="match_parent">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    />

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/name_sing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Nombre"
                    android:inputType="text"
                    />





            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/password_sign"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    />





            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/password_confirm_sign"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm_pass"
                    android:inputType="textPassword"
                    />





            </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@+id/register_sign"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/already_have_acount"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:textColor="@color/statusBarColor"
                />

        </LinearLayout>







    </LinearLayout>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/ingresar_sign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_anchor = "@id/coordinator_padre"
        app:layout_anchorGravity= "bottom|center"
        android:src="@drawable/ic_arrow_forward_black_24dp"
        />

</android.support.design.widget.CoordinatorLayout>